[package]
name = "boa_runtime"
description = "Example runtime for the Boa JavaScript engine."
keywords = ["javascript", "js", "runtime"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine = { workspace = true, features = ["either"] }
boa_gc.workspace = true
boa_interop.workspace = true
either = "1"
rustc-hash = { workspace = true, features = ["std"] }
http = "1"
url = "2.5.2"

[dev-dependencies]
indoc.workspace = true
textwrap.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
