[package]
name = "boa_wpt"
description = "Web Platform Tests runner for the Boa JavaScript engine."
keywords = ["javascript", "ECMASCript", "compiler", "wpt", "tester"]
categories = ["command-line-utilities"]
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine.workspace = true
boa_gc.workspace = true
boa_runtime.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = "2.2.1"
color-eyre.workspace = true
colored.workspace = true
fast-glob = "0.4.0"
quick-junit = "0.4.0"
rustc-hash = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
time.workspace = true
toml.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

[features]
default = ["boa_engine/intl_bundled", "boa_engine/experimental", "boa_engine/annex-b"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
